--- a/IDGenerator/App.config
+++ b/IDGenerator/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="IDGenerator.Properties.Settings.IDGeneratorCONSTRING"
+            connectionString="Data Source=RJ45;Initial Catalog=IDGeneratorProject;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     </startup>
