--- a/IDGenerator/App.config
+++ b/IDGenerator/App.config
@@ -1,13 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="IDGenerator.Properties.Settings.IDGeneratorCONSTRING"
-            connectionString="Data Source=RJ45;Initial Catalog=IDGeneratorProject;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="IDGenerator.Properties.Settings.IDGeneratorCONSTRING" connectionString="Data Source=RJ45;Initial Catalog=IDGeneratorProject;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="IDGenerator.Properties.Settings.IDGeneratorProjectConnectionString" connectionString="Data Source=LAPTOP-7CJ5L5U7\SQLEXPRESS;Initial Catalog=IDGeneratorProject;Integrated Security=True;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1"/>
     </startup>
 </configuration>
