--- a/IDGenerator/IDGenerator.csproj
+++ b/IDGenerator/IDGenerator.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EmguCV.3.1.0.1\build\EmguCV.props" Condition="Exists('..\packages\EmguCV.3.1.0.1\build\EmguCV.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,9 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,7 +36,25 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Emgu.CV.UI, Version=3.1.0.2282, Culture=neutral, PublicKeyToken=7281126722ab4438, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmguCV.3.1.0.1\lib\net30\Emgu.CV.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Emgu.CV.UI.GL, Version=3.1.0.2282, Culture=neutral, PublicKeyToken=7281126722ab4438, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmguCV.3.1.0.1\lib\net30\Emgu.CV.UI.GL.dll</HintPath>
+    </Reference>
+    <Reference Include="Emgu.CV.World, Version=3.1.0.2282, Culture=neutral, PublicKeyToken=7281126722ab4438, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmguCV.3.1.0.1\lib\net30\Emgu.CV.World.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenTK.1.1.2225.0\lib\net20\OpenTK.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenTK.GLControl, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenTK.GLControl.1.1.2225.0\lib\net20\OpenTK.GLControl.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,13 +66,57 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="ZedGraph, Version=5.1.5.28844, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZedGraph.5.1.5\lib\ZedGraph.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminACCOUNTS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminACCOUNTS.Designer.cs">
+      <DependentUpon>AdminACCOUNTS.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminNewRegisters.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminNewRegisters.Designer.cs">
+      <DependentUpon>AdminNewRegisters.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminREQUEST.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminREQUEST.Designer.cs">
+      <DependentUpon>AdminREQUEST.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminSCHOOL.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminSCHOOL.Designer.cs">
+      <DependentUpon>AdminSCHOOL.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminSTATUS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminSTATUS.Designer.cs">
+      <DependentUpon>AdminSTATUS.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminUSER.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AdminUSER.Designer.cs">
       <DependentUpon>AdminUSER.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EmailVerification.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmailVerification.Designer.cs">
+      <DependentUpon>EmailVerification.cs</DependentUpon>
+    </Compile>
+    <Compile Include="IDGeneratorProjectDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IDGeneratorProjectDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="LOGIN.cs">
       <SubType>Form</SubType>
@@ -58,24 +124,35 @@
     <Compile Include="LOGIN.Designer.cs">
       <DependentUpon>LOGIN.cs</DependentUpon>
     </Compile>
-    <Compile Include="IDGeneratorProjectDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>IDGeneratorProjectDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="PanelPlayground.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PanelPlayground.Designer.cs">
-      <DependentUpon>PanelPlayground.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resource1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource1.resx</DependentUpon>
+    </Compile>
+    <Compile Include="StudentAccountSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentAccountSetting.Designer.cs">
+      <DependentUpon>StudentAccountSetting.cs</DependentUpon>
+    </Compile>
     <Compile Include="ResetPassword.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ResetPassword.Designer.cs">
       <DependentUpon>ResetPassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StudentCapture.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentCapture.Designer.cs">
+      <DependentUpon>StudentCapture.cs</DependentUpon>
     </Compile>
     <Compile Include="StudentRegister.cs">
       <SubType>Form</SubType>
@@ -89,39 +166,68 @@
     <Compile Include="StudentUSER.Designer.cs">
       <DependentUpon>StudentUSER.cs</DependentUpon>
     </Compile>
+    <Compile Include="StudentViewID.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentViewID.Designer.cs">
+      <DependentUpon>StudentViewID.cs</DependentUpon>
+    </Compile>
     <Compile Include="VerificationCode.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="VerificationCode.Designer.cs">
       <DependentUpon>VerificationCode.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdminACCOUNTS.resx">
+      <DependentUpon>AdminACCOUNTS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminNewRegisters.resx">
+      <DependentUpon>AdminNewRegisters.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminREQUEST.resx">
+      <DependentUpon>AdminREQUEST.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminSCHOOL.resx">
+      <DependentUpon>AdminSCHOOL.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminSTATUS.resx">
+      <DependentUpon>AdminSTATUS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AdminUSER.resx">
       <DependentUpon>AdminUSER.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmailVerification.resx">
+      <DependentUpon>EmailVerification.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LOGIN.resx">
       <DependentUpon>LOGIN.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PanelPlayground.resx">
-      <DependentUpon>PanelPlayground.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="ResetPassword.resx">
       <DependentUpon>ResetPassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resource1.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StudentCapture.resx">
+      <DependentUpon>StudentCapture.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StudentRegister.resx">
       <DependentUpon>StudentRegister.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="StudentAccountSetting.resx">
+      <DependentUpon>StudentAccountSetting.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StudentUSER.resx">
       <DependentUpon>StudentUSER.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StudentViewID.resx">
+      <DependentUpon>StudentViewID.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VerificationCode.resx">
       <DependentUpon>VerificationCode.cs</DependentUpon>
@@ -137,6 +243,8 @@
     <None Include="IDGeneratorProjectDataSet.xss">
       <DependentUpon>IDGeneratorProjectDataSet.xsd</DependentUpon>
     </None>
+    <None Include="OpenTK.dll.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -169,5 +277,109 @@
   <ItemGroup>
     <None Include="Resources\Logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Information.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\View.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Reset.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Acc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\out.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\panelBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Back1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Profile.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\IDfront.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\IDback.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AccBack.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Statback.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mainBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CardBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NewRegBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RequestBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ActBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AccBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BG_main.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\f.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\blob-scene-haikei.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\layered-steps-haikei.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\layered-steps-haikei1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\layered-steps-haikei %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\layered-steps-haikei %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bg_pic_login.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CVSU LOGO.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FRONT_ID.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BACK_ID.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EmguCV.3.1.0.1\build\EmguCV.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EmguCV.3.1.0.1\build\EmguCV.props'))" />
+    <Error Condition="!Exists('..\packages\EmguCV.3.1.0.1\build\EmguCV.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EmguCV.3.1.0.1\build\EmguCV.targets'))" />
+  </Target>
+  <Import Project="..\packages\EmguCV.3.1.0.1\build\EmguCV.targets" Condition="Exists('..\packages\EmguCV.3.1.0.1\build\EmguCV.targets')" />
 </Project>
